fixing alignments

--- a/style.css
+++ b/style.css
@@ -4,10 +4,9 @@ a {
 
 .container {
     width: 992px;
-    margin: auto;   
+    margin: auto;        
+    border-radius: 10px; 
     border: 3px solid #73AD21;
-    padding: 10px;
-    border-radius: 10px;
 }
 
 .logo {
@@ -16,10 +15,12 @@ a {
 
 .logo-wrapper {
     float: left;
+    padding:5px 30px;
 }
 
 .account {
-    float: right;    
+    float: right; 
+    padding:5px 20px;
 }
 .account ul {
     color:red;
@@ -41,7 +42,7 @@ a {
 
 nav {
     clear:left;
-    text-align:center;    
+    text-align:center;      
 }
 
 nav ul {
@@ -53,7 +54,7 @@ nav li{
     padding: 10px;
     border: 2px solid black;
     background-color:aliceblue; 
-    margin:0.5em;
+    margin:0.4em;
 }
  nav li a{
      text-decoration: none;
@@ -79,23 +80,22 @@ nav li{
 
 section {
     float: left;
-    padding: 35px 0;    
+    padding: 5px 0;    
     width: 70%;      
-    border: 3px solid #73AD21;
+    border: 3px solid #73AD21;   
 }
 
 .bottom-right {
-  position:fixed;
-   bottom:0;
-  
-    margin-left    :720px;
+    position:fixed;
+    bottom:0;  
+    margin-left    :718px;
     height; 80px;
     font-size: 18px;
-    font-family: Arial;
-    color: #73AD21; 
+    font-family: Arial;    
     border: 3px solid #73AD21;
-    padding: 10px;
+    padding: 5px;
     border-radius: 10px;
+    background-color:#E0EEE0;
 }
 
 .status .name {
